# flask-freguesia

./: .gitignore  Makefile  compose.yml  deploy.sh  docker-nginx.conf  dockerfile  freguesia.db  freguesia.service  pyproject.toml  requirements.txt
app/: db.py  main.py  padrao_freguesia.py
app/static/: script.js  style.css
app/templates/: admin_content.html  base.html  form_recomendar.html  header.html
